--- a/samples.csproj
+++ b/samples.csproj
@@ -75,6 +75,7 @@
     <Content Include="build\test\transitionSpec.js" />
     <Content Include="build\test\viewSpec.js" />
     <Content Include="index.html" />
+    <Content Include="lib\angular-tree\impl\angular-tree.js" />
     <Content Include="lib\angular\angular-1.0.d.ts" />
     <Content Include="lib\angular\angular-cookies-1.0.d.ts" />
     <Content Include="lib\angular\angular-mocks-1.0.d.ts" />
