Fixed an issue where child states with empty route would create an invalid route.

--- a/router.csproj
+++ b/router.csproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
+    <None Include="banner" />
     <Content Include="build\angular-routing.js" />
     <Content Include="build\angular-routing.legacy.js" />
     <Content Include="build\angular-routing.legacy.min.js" />
