--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "grunt-contrib-watch": "~0.3.1",
     "grunt-contrib-yuidoc": "~0.4.0",
     "grunt-karma": "~0.3.0",
-    "yuidocjs": "~0.3.40"
+    "yuidocjs": "~0.3.40",
+    "grunt-contrib-connect": "~0.3.0"
   },
   "keywords": []
 }
