--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "grunt-contrib-yuidoc": "~0.4.0",
     "grunt-karma": "~0.3.0",
     "yuidocjs": "~0.3.40",
-    "grunt-contrib-connect": "~0.3.0"
+    "grunt-contrib-connect": "~0.3.0",
+    "grunt-contrib-copy": "~0.4.1"
   },
   "keywords": []
 }
