--- a/router.csproj
+++ b/router.csproj
@@ -114,6 +114,9 @@
     <Content Include="build\test\transitionSpec.js" />
     <Content Include="build\test\viewSpec.js" />
     <TypeScriptCompile Include="src\stateTransition.ts" />
+    <Content Include="test-grunt-jqlite-config.js" />
+    <Content Include="test-dev-jqlite-config.js" />
+    <Content Include="lib\jqLite\impl\jqlite.js" />
     <Content Include="lib\ui-bootstrap\impl\ui-bootstrap-tpls-0.2.0.min.js" />
     <Content Include="src\directives\uiView.js">
       <DependentUpon>uiView.ts</DependentUpon>
@@ -127,7 +130,7 @@
     <Content Include="src\stateTransition.js">
       <DependentUpon>stateTransition.ts</DependentUpon>
     </Content>
-    <Content Include="test-grunt-config.js" />
+    <Content Include="test-grunt-jquery-config.js" />
     <Content Include="gruntfile.js" />
     <Content Include="lib\angular\angular-1.0.d.ts" />
     <Content Include="lib\angular\angular-cookies-1.0.d.ts" />
@@ -201,7 +204,7 @@
       <DependentUpon>viewSpec.ts</DependentUpon>
     </Content>
     <Content Include="files.js" />
-    <Content Include="test-dev-config.js" />
+    <Content Include="test-dev-jquery-config.js" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="doc\turtorials\" />
