--- a/router.csproj
+++ b/router.csproj
@@ -64,14 +64,20 @@
     <None Include="src\stateTransition.js.map">
       <DependentUpon>stateTransition.ts</DependentUpon>
     </None>
+    <None Include="src\state\state.js.map">
+      <DependentUpon>state.ts</DependentUpon>
+    </None>
+    <None Include="src\state\stateBrowser.js.map">
+      <DependentUpon>stateBrowser.ts</DependentUpon>
+    </None>
+    <None Include="src\state\stateComparer.js.map">
+      <DependentUpon>stateComparer.ts</DependentUpon>
+    </None>
     <None Include="src\state\stateFactory.js.map">
       <DependentUpon>stateFactory.ts</DependentUpon>
     </None>
-    <None Include="src\state\stateHelper.js.map">
-      <DependentUpon>stateHelper.ts</DependentUpon>
-    </None>
-    <None Include="src\state\stateWrapper.js.map">
-      <DependentUpon>stateWrapper.ts</DependentUpon>
+    <None Include="src\state\stateRules.js.map">
+      <DependentUpon>stateRules.ts</DependentUpon>
     </None>
     <None Include="src\template.js.map">
       <DependentUpon>template.ts</DependentUpon>
@@ -123,17 +129,25 @@
     <Content Include="build\test\transitionSpec.js" />
     <Content Include="build\test\viewSpec.js" />
     <TypeScriptCompile Include="src\stateTransition.ts" />
-    <TypeScriptCompile Include="src\state\stateWrapper.ts" />
-    <TypeScriptCompile Include="src\state\stateHelper.ts" />
+    <TypeScriptCompile Include="src\state\state.ts" />
+    <TypeScriptCompile Include="src\state\stateRules.ts" />
     <TypeScriptCompile Include="src\state\stateFactory.ts" />
+    <TypeScriptCompile Include="src\state\stateComparer.ts" />
+    <Content Include="src\state\state.js">
+      <DependentUpon>state.ts</DependentUpon>
+    </Content>
+    <TypeScriptCompile Include="src\state\stateBrowser.ts" />
+    <Content Include="src\state\stateBrowser.js">
+      <DependentUpon>stateBrowser.ts</DependentUpon>
+    </Content>
+    <Content Include="src\state\stateComparer.js">
+      <DependentUpon>stateComparer.ts</DependentUpon>
+    </Content>
     <Content Include="src\state\stateFactory.js">
       <DependentUpon>stateFactory.ts</DependentUpon>
     </Content>
-    <Content Include="src\state\stateHelper.js">
-      <DependentUpon>stateHelper.ts</DependentUpon>
-    </Content>
-    <Content Include="src\state\stateWrapper.js">
-      <DependentUpon>stateWrapper.ts</DependentUpon>
+    <Content Include="src\state\stateRules.js">
+      <DependentUpon>stateRules.ts</DependentUpon>
     </Content>
     <Content Include="test-grunt-jqlite-config.js" />
     <Content Include="test-dev-jqlite-config.js" />
@@ -215,6 +229,26 @@
     <TypeScriptCompile Include="test\viewSpec.ts" />
     <Content Include="test\stateTransitionSpec.js">
       <DependentUpon>stateTransitionSpec.ts</DependentUpon>
+    </Content>
+    <TypeScriptCompile Include="test\state\stateSpec.ts" />
+    <TypeScriptCompile Include="test\state\stateBrowserSpec.ts" />
+    <Content Include="test\state\stateBrowserSpec.js">
+      <DependentUpon>stateBrowserSpec.ts</DependentUpon>
+    </Content>
+    <TypeScriptCompile Include="test\state\stateComparerSpec.ts" />
+    <Content Include="test\state\stateComparerSpec.js">
+      <DependentUpon>stateComparerSpec.ts</DependentUpon>
+    </Content>
+    <TypeScriptCompile Include="test\state\stateFactorySpec.ts" />
+    <Content Include="test\state\stateFactorySpec.js">
+      <DependentUpon>stateFactorySpec.ts</DependentUpon>
+    </Content>
+    <TypeScriptCompile Include="test\state\stateRulesSpec.ts" />
+    <Content Include="test\state\stateRulesSpec.js">
+      <DependentUpon>stateRulesSpec.ts</DependentUpon>
+    </Content>
+    <Content Include="test\state\stateSpec.js">
+      <DependentUpon>stateSpec.ts</DependentUpon>
     </Content>
     <Content Include="test\testcommon.js">
       <DependentUpon>testcommon.ts</DependentUpon>
