--- a/router.csproj
+++ b/router.csproj
@@ -37,6 +37,9 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include=".travis.yml" />
+    <None Include="build\angular-routing.min.js.map">
+      <DependentUpon>angular-routing.js</DependentUpon>
+    </None>
     <None Include="LICENSE" />
     <None Include="package.json" />
     <None Include="README.md" />
@@ -44,8 +47,11 @@
     <None Include="src\common.js.map">
       <DependentUpon>common.ts</DependentUpon>
     </None>
-    <None Include="src\directives\uiView.js.map">
-      <DependentUpon>uiView.ts</DependentUpon>
+    <None Include="src\directives\jemAnchor.js.map">
+      <DependentUpon>jemAnchor.ts</DependentUpon>
+    </None>
+    <None Include="src\directives\jemView.js.map">
+      <DependentUpon>jemView.ts</DependentUpon>
     </None>
     <None Include="src\legacy\prefix" />
     <None Include="src\legacy\suffix" />
@@ -154,7 +160,13 @@
     <TypeScriptCompile Include="src\state\stateRules.ts" />
     <TypeScriptCompile Include="src\state\stateFactory.ts" />
     <TypeScriptCompile Include="src\state\stateComparer.ts" />
-    <TypeScriptCompile Include="src\directives\uiAnchor.ts" />
+    <TypeScriptCompile Include="src\directives\jemAnchor.ts" />
+    <Content Include="src\directives\jemAnchor.js">
+      <DependentUpon>jemAnchor.ts</DependentUpon>
+    </Content>
+    <Content Include="src\directives\jemView.js">
+      <DependentUpon>jemView.ts</DependentUpon>
+    </Content>
     <Content Include="src\state\state.js">
       <DependentUpon>state.ts</DependentUpon>
     </Content>
@@ -178,9 +190,6 @@
     <Content Include="test-grunt-jqlite-config.js" />
     <Content Include="test-dev-jqlite-config.js" />
     <Content Include="lib\ui-bootstrap\impl\ui-bootstrap-tpls-0.2.0.min.js" />
-    <Content Include="src\directives\uiView.js">
-      <DependentUpon>uiView.ts</DependentUpon>
-    </Content>
     <None Include="src\prefix" />
     <None Include="src\suffix" />
     <TypeScriptCompile Include="src\scroll.ts" />
@@ -210,7 +219,7 @@
     <Content Include="src\common.js">
       <DependentUpon>common.ts</DependentUpon>
     </Content>
-    <TypeScriptCompile Include="src\directives\uiView.ts" />
+    <TypeScriptCompile Include="src\directives\jemView.ts" />
     <TypeScriptCompile Include="src\legacy\templateDecorator.ts" />
     <TypeScriptCompile Include="src\interfaces.d.ts" />
     <Content Include="src\interfaces.d.js">
