--- a/package.json
+++ b/package.json
@@ -31,11 +31,10 @@
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.3.1",
-    "grunt-contrib-yuidoc": "~0.4.0",
-    "grunt-karma": "~0.3.0",
-    "yuidocjs": "~0.3.40",
     "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-ngdocs": "~0.1.5",
+    "grunt-karma": "~0.3.0"
   },
   "keywords": []
 }
