--- a/version.yaml
+++ b/version.yaml
@@ -1,5 +1,5 @@
 # dotJEM Angular Routing build config file
 ---
-version: 0.3.2
-codename: blair
-stable: 0.3.2
+version: 0.4
+codename: caleb
+stable: 0.4
