Making Parameters more available as well as restructuring them

--- a/router.csproj
+++ b/router.csproj
@@ -135,6 +135,9 @@
     <Content Include="src\directives\jemView.js">
       <DependentUpon>jemView.ts</DependentUpon>
     </Content>
+    <Content Include="src\state.min.js">
+      <DependentUpon>state.ts</DependentUpon>
+    </Content>
     <Content Include="src\state\state.js">
       <DependentUpon>state.ts</DependentUpon>
     </Content>
