--- a/version.yaml
+++ b/version.yaml
@@ -1,5 +1,5 @@
 # dotJEM Angular Routing build config file
 ---
-version: 0.4
-codename: caleb
-stable: 0.4
+version: 0.4.1
+codename: whistler 
+stable: 0.4.1
