refactored transition object out of state.ts

--- a/router.csproj
+++ b/router.csproj
@@ -158,6 +158,10 @@
     <Content Include="src\state\stateUrlBuilder.js">
       <DependentUpon>stateUrlBuilder.ts</DependentUpon>
     </Content>
+    <TypeScriptCompile Include="src\state\transition.ts" />
+    <Content Include="src\state\transition.js">
+      <DependentUpon>transition.ts</DependentUpon>
+    </Content>
     <Content Include="src\template.min.js">
       <DependentUpon>template.ts</DependentUpon>
     </Content>
