--- a/router.csproj
+++ b/router.csproj
@@ -45,62 +45,8 @@
     <None Include="package.json" />
     <None Include="README.md" />
     <None Include="resources.md" />
-    <None Include="src\directives\jemAnchor.js.map">
-      <DependentUpon>jemAnchor.ts</DependentUpon>
-    </None>
-    <None Include="src\directives\jemView.js.map">
-      <DependentUpon>jemView.ts</DependentUpon>
-    </None>
     <None Include="src\legacy\prefix" />
     <None Include="src\legacy\suffix" />
-    <None Include="src\legacy\templateDecorator.js.map">
-      <DependentUpon>templateDecorator.ts</DependentUpon>
-    </None>
-    <None Include="src\state.js.map">
-      <DependentUpon>state.ts</DependentUpon>
-    </None>
-    <None Include="src\state\state.js.map">
-      <DependentUpon>state.ts</DependentUpon>
-    </None>
-    <None Include="test\legacy\routeLegacySpec.js.map">
-      <DependentUpon>routeLegacySpec.ts</DependentUpon>
-    </None>
-    <None Include="test\routeSpec.js.map">
-      <DependentUpon>routeSpec.ts</DependentUpon>
-    </None>
-    <None Include="test\scrollSpec.js.map">
-      <DependentUpon>scrollSpec.ts</DependentUpon>
-    </None>
-    <None Include="test\stateSpec.js.map">
-      <DependentUpon>stateSpec.ts</DependentUpon>
-    </None>
-    <None Include="test\stateTransitionSpec.js.map">
-      <DependentUpon>stateTransitionSpec.ts</DependentUpon>
-    </None>
-    <None Include="test\state\stateBrowserSpec.js.map">
-      <DependentUpon>stateBrowserSpec.ts</DependentUpon>
-    </None>
-    <None Include="test\state\stateComparerSpec.js.map">
-      <DependentUpon>stateComparerSpec.ts</DependentUpon>
-    </None>
-    <None Include="test\state\stateFactorySpec.js.map">
-      <DependentUpon>stateFactorySpec.ts</DependentUpon>
-    </None>
-    <None Include="test\state\stateRulesSpec.js.map">
-      <DependentUpon>stateRulesSpec.ts</DependentUpon>
-    </None>
-    <None Include="test\state\stateSpec.js.map">
-      <DependentUpon>stateSpec.ts</DependentUpon>
-    </None>
-    <None Include="test\state\stateUrlBuilderSpec.js.map">
-      <DependentUpon>stateUrlBuilderSpec.ts</DependentUpon>
-    </None>
-    <None Include="test\testcommon.js.map">
-      <DependentUpon>testcommon.ts</DependentUpon>
-    </None>
-    <None Include="test\viewSpec.js.map">
-      <DependentUpon>viewSpec.ts</DependentUpon>
-    </None>
     <None Include="version.yaml" />
   </ItemGroup>
   <ItemGroup>
@@ -135,8 +81,9 @@
     <Content Include="src\directives\jemView.js">
       <DependentUpon>jemView.ts</DependentUpon>
     </Content>
-    <Content Include="src\state.min.js">
-      <DependentUpon>state.ts</DependentUpon>
+    <TypeScriptCompile Include="src\resolve.ts" />
+    <Content Include="src\resolve.js">
+      <DependentUpon>resolve.ts</DependentUpon>
     </Content>
     <Content Include="src\state\state.js">
       <DependentUpon>state.ts</DependentUpon>
@@ -161,9 +108,6 @@
     <TypeScriptCompile Include="src\state\transition.ts" />
     <Content Include="src\state\transition.js">
       <DependentUpon>transition.ts</DependentUpon>
-    </Content>
-    <Content Include="src\template.min.js">
-      <DependentUpon>template.ts</DependentUpon>
     </Content>
     <Content Include="test-grunt-jqlite-config.js" />
     <Content Include="test-dev-jqlite-config.js" />
