--- a/router.csproj
+++ b/router.csproj
@@ -88,6 +88,9 @@
     <Content Include="src\resolve.js">
       <DependentUpon>resolve.ts</DependentUpon>
     </Content>
+    <Content Include="src\state.min.js">
+      <DependentUpon>state.ts</DependentUpon>
+    </Content>
     <Content Include="src\state\state.js">
       <DependentUpon>state.ts</DependentUpon>
     </Content>
