--- a/router.csproj
+++ b/router.csproj
@@ -81,10 +81,16 @@
     <Content Include="src\directives\jemAnchor.js">
       <DependentUpon>jemAnchor.ts</DependentUpon>
     </Content>
+    <Content Include="src\directives\jemAnchor.min.js">
+      <DependentUpon>jemAnchor.ts</DependentUpon>
+    </Content>
     <Content Include="src\directives\jemView.js">
       <DependentUpon>jemView.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="src\resolve.ts" />
+    <Content Include="src\directives\jemView.min.js">
+      <DependentUpon>jemView.ts</DependentUpon>
+    </Content>
     <Content Include="src\resolve.js">
       <DependentUpon>resolve.ts</DependentUpon>
     </Content>
