--- a/router.csproj
+++ b/router.csproj
@@ -45,6 +45,9 @@
     <None Include="package.json" />
     <None Include="README.md" />
     <None Include="resources.md" />
+    <None Include="src\directives\jemView.js.map">
+      <DependentUpon>jemView.ts</DependentUpon>
+    </None>
     <None Include="src\legacy\prefix" />
     <None Include="src\legacy\suffix" />
     <None Include="test\stateSpec.js.map">
