--- a/version.yaml
+++ b/version.yaml
@@ -1,5 +1,5 @@
 # dotJEM Angular Routing build config file
 ---
-version: 0.4.3
-codename: whistler 
-stable: 0.4.3
+version: 0.5.0
+codename: homer 
+stable: 0.5.0
