--- a/router.csproj
+++ b/router.csproj
@@ -87,6 +87,10 @@
     <Content Include="src\directives\jemAnchor.min.js">
       <DependentUpon>jemAnchor.ts</DependentUpon>
     </Content>
+    <TypeScriptCompile Include="src\directives\jemLink.ts" />
+    <Content Include="src\directives\jemLink.js">
+      <DependentUpon>jemLink.ts</DependentUpon>
+    </Content>
     <Content Include="src\directives\jemView.js">
       <DependentUpon>jemView.ts</DependentUpon>
     </Content>
