--- a/version.yaml
+++ b/version.yaml
@@ -1,5 +1,5 @@
 # dotJEM Angular Routing build config file
 ---
-version: 0.5.0
-codename: homer 
-stable: 0.5.0
+version: 0.5.1
+codename: bart 
+stable: 0.5.1
