--- a/version.yaml
+++ b/version.yaml
@@ -1,5 +1,5 @@
 # dotJEM Angular Routing build config file
 ---
-version: 0.5.2
-codename: bart
-stable: 0.5.2
+version: 0.5.3
+codename: lisa
+stable: 0.5.3
