--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-ngdocs": "~0.1.5",
     "grunt-karma": "~0.7.1",
-    "grunt-tslint": "~0.3.2"
+    "grunt-tslint": "~0.3.2",
+    "karma-jasmine": "~0.1.5"
   },
   "keywords": []
 }
