--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm install -g karma
+  - npm install -g karma-jasmine
   - npm install -g typescript
   - npm install -g grunt-cli
   - ./nodeserver.sh > /dev/null &
