Added grunt deveop target.
This includes two things atm. Servers and copying some files into the
gh-pages folder.

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,13 @@
 src/**/*.js
 src/*.js
 
-
 test/**/*.js
 test/*.js
 
-gh-pages/scripts/*.js
+temp/*.*
+temp/**/*.*
 
+gh-pages/scripts/*.js
 *.js.map
 
 # Local node modules 'yuk'
