#102 Major refactoring of transition pipeline.
This doesn't complete this task for 0.7 as there are some renaming left
etc. But it should make way for #81.

--- a/router.csproj
+++ b/router.csproj
@@ -70,6 +70,7 @@
     <Content Include="build\test\stateSpec.js" />
     <Content Include="build\test\transitionSpec.js" />
     <Content Include="build\test\viewSpec.js" />
+    <TypeScriptCompile Include="src\stages.ts" />
     <TypeScriptCompile Include="src\stateTransition.ts" />
     <TypeScriptCompile Include="src\state\state.ts" />
     <TypeScriptCompile Include="src\state\stateRules.ts" />
