--- a/router.csproj
+++ b/router.csproj
@@ -70,7 +70,7 @@
     <Content Include="build\test\stateSpec.js" />
     <Content Include="build\test\transitionSpec.js" />
     <Content Include="build\test\viewSpec.js" />
-    <TypeScriptCompile Include="src\stages.ts" />
+    <TypeScriptCompile Include="src\pipeline.ts" />
     <TypeScriptCompile Include="src\stateTransition.ts" />
     <TypeScriptCompile Include="src\state\state.ts" />
     <TypeScriptCompile Include="src\state\stateRules.ts" />
@@ -132,18 +132,6 @@
     <TypeScriptCompile Include="src\state\stateUrlBuilder.ts" />
     <Content Include="src\state\stateUrlBuilder.js">
       <DependentUpon>stateUrlBuilder.ts</DependentUpon>
-    </Content>
-    <Content Include="src\state\transition\commands.js">
-      <DependentUpon>commands.ts</DependentUpon>
-    </Content>
-    <Content Include="src\state\transition\commands.ts" />
-    <Content Include="src\state\transition\context.js">
-      <DependentUpon>context.ts</DependentUpon>
-    </Content>
-    <Content Include="src\state\transition\context.ts" />
-    <TypeScriptCompile Include="src\state\transition\transition.ts" />
-    <Content Include="src\state\transition\transition.js">
-      <DependentUpon>transition.ts</DependentUpon>
     </Content>
     <Content Include="test-grunt-jqlite-config.js" />
     <Content Include="test-dev-jqlite-config.js" />
@@ -242,9 +230,6 @@
       <DependentUpon>testcommon.ts</DependentUpon>
     </Content>
     <TypeScriptCompile Include="test\stateTransitionSpec.ts" />
-    <Content Include="test\viewSpec.js">
-      <DependentUpon>viewSpec.ts</DependentUpon>
-    </Content>
     <Content Include="test-dev-jquery-config.js" />
   </ItemGroup>
   <ItemGroup>
