--- a/router.csproj
+++ b/router.csproj
@@ -70,6 +70,8 @@
     <Content Include="build\test\stateSpec.js" />
     <Content Include="build\test\transitionSpec.js" />
     <Content Include="build\test\viewSpec.js" />
+    <TypeScriptCompile Include="src\filters\isActiveState.ts" />
+    <TypeScriptCompile Include="src\filters\isCurrentState.ts" />
     <TypeScriptCompile Include="src\pipeline.ts" />
     <TypeScriptCompile Include="src\stateTransition.ts" />
     <TypeScriptCompile Include="src\state\state.ts" />
