--- a/version.yaml
+++ b/version.yaml
@@ -1,5 +1,5 @@
 # dotJEM Angular Routing build config file
 ---
-version: 0.6.1
-codename: burns
-stable: 0.6.1
+version: 0.6.6
+codename: edna
+stable: 0.6.6
