--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ language: node_js
 node_js:
   - "0.10"
 
+install:
+  - npm install
+  - npm install -g typescript
+  - npm install -g grunt-cli
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm install -g typescript
-  - npm install -g grunt-cli
   - ./nodeserver.sh > /dev/null &
-
 script:
   - grunt
